[project]
name = "askgitdm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auto-py-to-exe>=2.46.0",
    "configparser>=7.2.0",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
